--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 plugins {
     id 'org.jetbrains.kotlin.multiplatform' version '1.3.61'
 }
+
 repositories {
+    jcenter()
+    maven {
+        url  "https://dl.bintray.com/phodal/chapi"
+    }
     mavenCentral()
 }
 
@@ -18,15 +23,12 @@ kotlin {
         nodejs {
         }
     }
-    // For ARM, should be changed to iosArm32 or iosArm64
-    // For Linux, should be changed to e.g. linuxX64
-    // For MacOS, should be changed to e.g. macosX64
-    // For Windows, should be changed to e.g. mingwX64
-    macosX64("macos")
+
     sourceSets {
         commonMain {
             dependencies {
                 implementation kotlin('stdlib-common')
+                implementation 'com.phodal.chapi:chapi-domain:0.1.1'
             }
         }
         commonTest {
@@ -38,6 +40,7 @@ kotlin {
         jvmMain {
             dependencies {
                 implementation kotlin('stdlib-jdk8')
+                implementation 'com.phodal.chapi:chapi-domain-jvm:0.1.1'
             }
         }
         jvmTest {
@@ -49,16 +52,13 @@ kotlin {
         jsMain {
             dependencies {
                 implementation kotlin('stdlib-js')
+                implementation 'com.phodal.chapi:chapi-domain-js:0.1.1'
             }
         }
         jsTest {
             dependencies {
                 implementation kotlin('test-js')
             }
-        }
-        macosMain {
-        }
-        macosTest {
         }
     }
 }
