--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,27 @@
 plugins {
     id 'org.jetbrains.kotlin.multiplatform' version '1.3.61'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.61'
 }
 
 repositories {
-    jcenter()
-    maven {
-        url  "https://dl.bintray.com/phodal/chapi"
-    }
+//    jcenter()
     mavenCentral()
+    maven {url  "https://dl.bintray.com/phodal/chapi"}
 }
 
 group 'com.example'
 version '0.0.1'
 
 apply plugin: 'maven-publish'
+apply plugin: 'kotlinx-serialization'
+
+configurations.all {
+    // Check for updates every build
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+}
+
+def chapiVersion = '0.1.1'
+def serialization_version = "0.14.0"
 
 kotlin {
     jvm()
@@ -28,7 +36,8 @@ kotlin {
         commonMain {
             dependencies {
                 implementation kotlin('stdlib-common')
-                implementation 'com.phodal.chapi:chapi-domain:0.1.1'
+                implementation 'com.phodal.chapi:chapi-domain:' + chapiVersion
+                implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-common:$serialization_version"
             }
         }
         commonTest {
@@ -40,7 +49,8 @@ kotlin {
         jvmMain {
             dependencies {
                 implementation kotlin('stdlib-jdk8')
-                implementation 'com.phodal.chapi:chapi-domain-jvm:0.1.1'
+                implementation 'com.phodal.chapi:chapi-domain-jvm:' + chapiVersion
+                implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
             }
         }
         jvmTest {
@@ -52,7 +62,8 @@ kotlin {
         jsMain {
             dependencies {
                 implementation kotlin('stdlib-js')
-                implementation 'com.phodal.chapi:chapi-domain-js:0.1.1'
+                implementation 'com.phodal.chapi:chapi-domain-js:' + chapiVersion
+                implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-js:$serialization_version"
             }
         }
         jsTest {
